external-crates/move/tools/move-cli/tests/build_tests/include_exclude_stdlib/args.exp
Command `build -v`:
BUILDING build_include_exclude_stdlib
error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:2:7
  │
2 │   use std::signer;
  │       ^^^^^^^^^^^ Invalid 'use'. Unbound module: '(std=0x1)::signer'

warning[W09002]: unused variable
  ┌─ ./sources/UseSigner.move:4:16
  │
4 │   public fun f(account: &signer): address {
  │                ^^^^^^^ Unused parameter 'account'. Consider removing or prefixing with an underscore: '_account'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E03002]: unbound module
  ┌─ ./sources/UseSigner.move:5:5
  │
5 │     signer::address_of(account)
  │     ^^^^^^ Unbound module alias 'signer'

Command `-d -v build`:
INCLUDING DEPENDENCY MoveStdlib
BUILDING build_include_exclude_stdlib
